# forward-netbox

./: .coveragerc  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .sensitive-binary-allowlist  .sensitive-history-baseline  .yamllint  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PKG-INFO  README.md  SECURITY.md  SHA256SUMS  constraints.txt  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-release.in  requirements-release.txt  tasks.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  harness-gardening.yml  release.yml  trusted-sensitive-pr.yml  trusted-tag.yml
development/: .env  .env.example  Dockerfile  docker-compose.override.yml  docker-compose.yml  launch-netbox.sh
development/configuration/: configuration.py  logging.py  plugins.py
development/env/: netbox.env
docs/: .pages.yml  README.md  index.md  nqe-json-reference.md
docs/00_Project_Knowledge/: .pages.yml  README.md  agent-workflow.md  architecture.md  code-boundary-map.md  harness-engineering-alignment.md  local-docker-workflow.md  quality-score.md  release-playbook.md  runtime-tuning-runbook.md  validation-matrix.md
docs/01_User_Guide/: .pages.yml  FAQ.md  README.md  configuration.md  data_mapping.md  extras.md  ingestions.md  installation.md  nqe_map.md  operations.md  sources.md  syncs.md  transform_maps.md  troubleshooting.md  upgrade.md  usage.md  versioning.md
docs/02_Reference/: .pages.yml  README.md  apply-engine-model-matrix.md  architecture-flow.md  built-in-nqe-maps.md  device-type-alias-data-file.md  feature-tag-rules-data-file.md  model-mapping-matrix.md  rest-api.md
docs/02_Release_Notes/: .pages.yml  version_1.md  version_2.md  version_3.md  version_4.md  version_5.md
docs/03_Plans/: .pages.yml  plan-template.md  technical-debt.md  todo-and-improvements.md
docs/nqe/: dcim.cable.nqe  dcim.device.nqe  dcim.devicerole.nqe  dcim.devicetype.nqe  dcim.interface.nqe  dcim.inventoryitem.nqe  dcim.location.nqe  dcim.manufacturer.nqe  dcim.virtualchassis.nqe  extras.os_lifecycle.nqe  index.md  ipam.ipaddress.nqe  ipam.prefix.nqe  ipam.vlan.nqe  ipam.vrf.nqe
forward_netbox/: __init__.py  choices.py  exceptions.py  filtersets.py  forms.py  jobs.py  models.py  navigation.py  signals.py  tables.py  template_content.py  urls.py  views.py
forward_netbox/api/: nested_serializers.py  serializers.py  urls.py  views.py
forward_netbox/data/: nqe_map.json
forward_netbox/graphql/: __init__.py  enums.py  filters.py  schema.py  types.py
forward_netbox/migrations/: 0001_initial.py  0001_initial_squashed_0013_switch_to_branching_plugin.py  0002_add_coalesce_fields.py  0002_forwardsnapshot_status.py  0002_remove_forwardsource_type.py  0002_remove_transform_maps.py  0003_forwardingestionissue_context_fields.py  0003_forwardnqequery.py  0003_forwardsource_type_and_more.py  0004_forwardingestion_baseline_fields.py  0004_forwardsource_network_id.py  0004_forwardsync_auto_merge.py  0005_alter_forwardrelationshipfield_source_model_and_more.py  0005_merge_20251021_1007.py  0005_validation_and_reporting.py  0006_alter_forwardnqemap_netbox_model.py  0006_alter_forwardtransformmap_target_model.py  0007_forwardingestion_persisted_change_counters.py  0007_prepare_custom_fields.py  0008_alter_forwardnqemap_netbox_model.py  0008_prepare_transform_maps.py  0009_alter_forwardnqemap_netbox_model.py  0009_transformmap_changes_for_netbox_v4_2.py  0010_forwardvalidationrun_override_applied_and_more.py  0010_remove_uuid_from_get_or_create.py  0011_forwardingestion_change_request_id.py  0011_update_part_number_DCIM_inventory_item_template.py  0012_forwardnqemap_query_reference.py  0012_remove_status_field.py  0013_execution_run_step.py  0013_switch_to_branching_plugin.py  0014_execution_step_fetch_scope.py  0014_forwardtransformmapgroup_forwardtransformmap_group.py  0015_execution_step_apply_engine.py  0015_forwardingestionissue.py  0016_execution_step_query_metrics.py  0016_tags_and_changelog_for_snapshots.py  0017_execution_step_row_counters.py  0017_forwardsync_update_custom_fields.py  0018_execution_run_reconciliation_events.py  (+26 more)
forward_netbox/queries/: forward_aci_apic_cimc_inventory.nqe  forward_aci_apic_nodes.nqe  forward_aci_app_profiles.nqe  forward_aci_bridge_domains.nqe  forward_aci_command_inventory.nqe  forward_aci_contracts.nqe  forward_aci_endpoint_groups.nqe  forward_aci_fabrics.nqe  forward_aci_filters.nqe  forward_aci_l3outs.nqe  forward_aci_nodes.nqe  forward_aci_pods.nqe  forward_aci_static_port_bindings.nqe  forward_aci_tenants.nqe  forward_aci_vrfs.nqe  forward_bgp_address_families.nqe  forward_bgp_peer_address_families.nqe  forward_bgp_peers.nqe  forward_cable_bundles.nqe  forward_cimc_endpoint_inventory.nqe  forward_device_analysis.nqe  forward_device_feature_tags.nqe  forward_device_feature_tags_with_rules.nqe  forward_device_models.nqe  forward_device_models_with_netbox_aliases.nqe  forward_device_types.nqe  forward_devices.nqe  (+31 more)
scripts/: authorize_trusted_tag.py  build_netbox_device_type_aliases.py  build_netbox_feature_tag_rules.py  build_reproducible_distribution.py  check_commit_msg.py  check_harness.py  check_release_authorization.py  check_sensitive_content.py  development_secrets.py  extract_tm.py  gen_changelog.py  generate_development_secrets.py  import_tm.py  playwright_forward_ui.mjs  release.py  sensitive_content.py  update_tm.sh  validate_installed_artifact.py  validate_sbom.py  verify_release_provenance.py
(+862 files in other folders)
