[tool.poetry]
name = "forward-netbox"
version = "2.5.0"
description = "NetBox plugin to sync Forward data into NetBox via built-in NQE queries"
authors = ["Craig Johnson <craigjohnson@forwardnetworks.com>"]
license = "MIT"
readme = "README.md"
keywords = ["netbox", "forward", "plugin", "sync", "nqe"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
packages = [{include = "forward_netbox"}]

[tool.poetry.urls]
Homepage = "https://github.com/forwardnetworks/forward-netbox"
Repository = "https://github.com/forwardnetworks/forward-netbox"
Documentation = "https://github.com/forwardnetworks/forward-netbox/tree/main/docs"
Changelog = "https://github.com/forwardnetworks/forward-netbox/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/forwardnetworks/forward-netbox/issues"

[tool.poetry.dependencies]
httpx = ">0.26,<0.29"
netboxlabs-netbox-branching = ">=1.1.0,<1.2.0"
pyzipper = ">=0.3.6,<0.5.0"
python = "^3.10"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
build = "^1.2.2"
invoke = ">=2.2,<4.0"
mkdocs = "^1.6.1"
mkdocs-awesome-pages-plugin = "^2.10.1"
mkdocs-material = "^9.6.12"
pymdown-extensions = ">=10.15,<12.0"
mdx-truly-sane-lists = "^1.3"
pre-commit = "^4.0.1"
python-dotenv = "^1.0.1"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
