[tool.poetry]
name = "forward-netbox"
version = "2.5.4"
description = "NetBox plugin to sync Forward data into NetBox via built-in NQE queries"
authors = ["Craig Johnson <craigjohnson@forwardnetworks.com>"]
license = "MIT"
readme = "README.md"
keywords = ["netbox", "forward", "plugin", "sync", "nqe"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
packages = [{include = "forward_netbox"}]

[tool.poetry.urls]
Homepage = "https://github.com/forwardnetworks/forward-netbox"
Repository = "https://github.com/forwardnetworks/forward-netbox"
Documentation = "https://github.com/forwardnetworks/forward-netbox/tree/main/docs"
Changelog = "https://github.com/forwardnetworks/forward-netbox/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/forwardnetworks/forward-netbox/issues"

[tool.poetry.dependencies]
httpx = ">0.26,<0.29"
netboxlabs-netbox-branching = ">=1.1.0,<1.2.0"
pyzipper = ">=0.3.6,<0.5.0"
python = "^3.10"
# Optional NetBox-plugin integrations. The core install pulls none of these;
# their sync maps stay dormant until the plugin is installed AND enabled. Pull
# them with an extra, e.g. `pip install forward-netbox[integrations]` (all) or a
# single one like `forward-netbox[dlm]`. You must still add each plugin to
# PLUGINS in configuration.py and run migrations — see the release notes.
netbox-dlm = {version = ">=0.2.0", optional = true}
netbox-routing = {version = ">=0.4.0", optional = true}
netbox-cisco-aci = {version = ">=0.4.0", optional = true}
netbox-peering-manager = {version = "*", optional = true}

[tool.poetry.extras]
dlm = ["netbox-dlm"]
routing = ["netbox-routing"]
aci = ["netbox-cisco-aci"]
peering = ["netbox-peering-manager"]
integrations = [
    "netbox-dlm",
    "netbox-routing",
    "netbox-cisco-aci",
    "netbox-peering-manager",
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
build = "^1.2.2"
invoke = ">=2.2,<4.0"
mkdocs = "^1.6.1"
mkdocs-awesome-pages-plugin = "^2.10.1"
mkdocs-material = "^9.6.12"
pymdown-extensions = ">=10.15,<12.0"
mdx-truly-sane-lists = "^1.3"
pre-commit = "^4.0.1"
python-dotenv = "^1.0.1"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
